packaged-networking-stack.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: AtomikLabs Networking Substack Definitions
Parameters:
  EnvironmentName:
    Type: String
    Description: The name of the environment
    Default: dev
    AllowedValues:
    - dev
    - stage
    - prod
  VpcCidr:
    Type: String
    Description: The CIDR block for the VPC
    Default: 10.0.0.0/16
  PublicSubnet1Cidr:
    Type: String
    Description: The CIDR block for the public subnet 1
    Default: 10.0.1.0/24
  PublicSubnet2Cidr:
    Type: String
    Description: The CIDR block for the public subnet 2
    Default: 10.0.2.0/24
  PrivateSubnet1Cidr:
    Type: String
    Description: The CIDR block for the private subnet 1
    Default: 10.0.101.0/24
  PrivateSubnet2Cidr:
    Type: String
    Description: The CIDR block for the private subnet 2
    Default: 10.0.102.0/24
Resources:
  ALVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock:
        Ref: VpcCidr
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
      - Key: Name
        Value:
          Fn::Sub: ${EnvironmentName}-vpc
      - Key: AtomikLabs:Environment
        Value:
          Ref: EnvironmentName
  ALInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value:
          Fn::Sub: ${EnvironmentName}-igw
      - Key: AtomikLabs:Environment
        Value:
          Ref: EnvironmentName
  ALVPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: ALVPC
      InternetGatewayId:
        Ref: ALInternetGateway
  ALPublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: ALVPC
      CidrBlock:
        Ref: PublicSubnet1Cidr
      AvailabilityZone:
        Fn::Select:
        - 0
        - Fn::GetAZs: ''
      Tags:
      - Key: Name
        Value:
          Fn::Sub: ${EnvironmentName}-public-subnet-1
      - Key: AtomikLabs:Environment
        Value:
          Ref: EnvironmentName
  ALPublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: ALVPC
      CidrBlock:
        Ref: PublicSubnet2Cidr
      AvailabilityZone:
        Fn::Select:
        - 1
        - Fn::GetAZs: ''
      Tags:
      - Key: Name
        Value:
          Fn::Sub: ${EnvironmentName}-public-subnet-2
      - Key: AtomikLabs:Environment
        Value:
          Ref: EnvironmentName
  ALPrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: ALVPC
      CidrBlock:
        Ref: PrivateSubnet1Cidr
      AvailabilityZone:
        Fn::Select:
        - 0
        - Fn::GetAZs: ''
      Tags:
      - Key: Name
        Value:
          Fn::Sub: ${EnvironmentName}-private-subnet-1
      - Key: AtomikLabs:Environment
        Value:
          Ref: EnvironmentName
  ALPrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: ALVPC
      CidrBlock:
        Ref: PrivateSubnet2Cidr
      AvailabilityZone:
        Fn::Select:
        - 1
        - Fn::GetAZs: ''
      Tags:
      - Key: Name
        Value:
          Fn::Sub: ${EnvironmentName}-private-subnet-2
      - Key: AtomikLabs:Environment
        Value:
          Ref: EnvironmentName
  ALElasticIP1:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
      - Key: Name
        Value:
          Fn::Sub: ${EnvironmentName}-eip-1
      - Key: AtomikLabs:Environment
        Value:
          Ref: EnvironmentName
  ALElasticIP2:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
      - Key: Name
        Value:
          Fn::Sub: ${EnvironmentName}-eip-2
      - Key: AtomikLabs:Environment
        Value:
          Ref: EnvironmentName
  ALNatGateway1:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
        - ALElasticIP1
        - AllocationId
      SubnetId:
        Ref: ALPublicSubnet1
      Tags:
      - Key: Name
        Value:
          Fn::Sub: ${EnvironmentName}-nat-gateway-1
      - Key: AtomikLabs:Environment
        Value:
          Ref: EnvironmentName
  ALNatGateway2:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
        - ALElasticIP2
        - AllocationId
      SubnetId:
        Ref: ALPublicSubnet2
      Tags:
      - Key: Name
        Value:
          Fn::Sub: ${EnvironmentName}-nat-gateway-2
      - Key: AtomikLabs:Environment
        Value:
          Ref: EnvironmentName
  ALPublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: ALVPC
      Tags:
      - Key: Name
        Value:
          Fn::Sub: ${EnvironmentName}-public-route-table
      - Key: AtomikLabs:Environment
        Value:
          Ref: EnvironmentName
  ALPrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: ALVPC
      Tags:
      - Key: Name
        Value:
          Fn::Sub: ${EnvironmentName}-private-route-table-1
      - Key: AtomikLabs:Environment
        Value:
          Ref: EnvironmentName
  ALPrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: ALVPC
      Tags:
      - Key: Name
        Value:
          Fn::Sub: ${EnvironmentName}-private-route-table-2
      - Key: AtomikLabs:Environment
        Value:
          Ref: EnvironmentName
  ALPublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: ALPublicSubnet1
      RouteTableId:
        Ref: ALPublicRouteTable
  ALPublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: ALPublicSubnet2
      RouteTableId:
        Ref: ALPublicRouteTable
  ALPrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: ALPrivateSubnet1
      RouteTableId:
        Ref: ALPrivateRouteTable1
  ALPrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: ALPrivateSubnet2
      RouteTableId:
        Ref: ALPrivateRouteTable2
  ALPublicRoute:
    Type: AWS::EC2::Route
    DependsOn:
    - ALVPCGatewayAttachment
    Properties:
      RouteTableId:
        Ref: ALPublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: ALInternetGateway
  ALPrivateRoute1:
    Type: AWS::EC2::Route
    DependsOn:
    - ALNatGateway1
    Properties:
      RouteTableId:
        Ref: ALPrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: ALNatGateway1
  ALPrivateRoute2:
    Type: AWS::EC2::Route
    DependsOn:
    - ALNatGateway2
    Properties:
      RouteTableId:
        Ref: ALPrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: ALNatGateway2
  ALLambdaSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for Lambda functions
      VpcId:
        Ref: ALVPC
      SecurityGroupEgress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 443
        ToPort: 443
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 5432
        ToPort: 5432
        CidrIp: 0.0.0.0/0
  ALRDSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for RDS PostgreSQL
      VpcId:
        Ref: ALVPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 5432
        ToPort: 5432
        CidrIp: 162.156.14.156/32
      - IpProtocol: tcp
        FromPort: 5432
        ToPort: 5432
        SourceSecurityGroupId:
          Ref: ALLambdaSecurityGroup
  ALVPCNetworkACL:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId:
        Ref: ALVPC
      Tags:
      - Key: Name
        Value:
          Fn::Sub: ${EnvironmentName}-vpc-network-acl
      - Key: AtomikLabs:Environment
        Value:
          Ref: EnvironmentName
  ALInboundHTTPRule:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId:
        Ref: ALVPCNetworkACL
      RuleNumber: 100
      Protocol: 6
      RuleAction: allow
      Egress: false
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: 80
        To: 80
  ALInboundHTTPSRules:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId:
        Ref: ALVPCNetworkACL
      RuleNumber: 101
      Protocol: 6
      RuleAction: allow
      Egress: false
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: 443
        To: 443
  OutboundRule:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId:
        Ref: ALVPCNetworkACL
      RuleNumber: 200
      Protocol: -1
      RuleAction: allow
      Egress: true
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: 0
        To: 65535
Outputs:
  VPC:
    Description: The ID of the VPC
    Value:
      Ref: ALVPC
  PublicSubnet1:
    Description: The ID of the public subnet 1
    Value:
      Ref: ALPublicSubnet1
  PublicSubnet2:
    Description: The ID of the public subnet 2
    Value:
      Ref: ALPublicSubnet2
  PrivateSubnet1:
    Description: The ID of the private subnet 1
    Value:
      Ref: ALPrivateSubnet1
  PrivateSubnet2:
    Description: The ID of the private subnet 2
    Value:
      Ref: ALPrivateSubnet2
  PublicRouteTable:
    Description: The ID of the public route table
    Value:
      Ref: ALPublicRouteTable
  PrivateRouteTable1:
    Description: The ID of the private route table 1
    Value:
      Ref: ALPrivateRouteTable1
  PrivateRouteTable2:
    Description: The ID of the private route table 2
    Value:
      Ref: ALPrivateRouteTable2
  LambdaSecurityGroup:
    Description: The ID of the Lambda security group
    Value:
      Ref: ALLambdaSecurityGroup
  RDSSecurityGroup:
    Description: The ID of the RDS security group
    Value:
      Ref: ALRDSSecurityGroup
  VPCNetworkACL:
    Description: The ID of the VPC network ACL
    Value:
      Ref: ALVPCNetworkACL
